src/features/common/TreeCounter/TreeCounter.module.scss
@import './../../../theme/theme';

.treeCounter {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.treeCounterData {
  position: absolute;
  top: 0px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.treeCounterDataField > h1 {
  color: $light;
  font-family: $primaryFontFamily;
  font-weight: bold;
  text-align: center;
  font-size: $fontXXXLarge;
  margin-bottom: 0px;
}
.treeCounterDataField > h2 {
  color: $light;
  font-family: $primaryFontFamily;
  font-weight: bold;
  text-align: center;
  font-size: $fontSmall;
}

.targetTextForPrivate {
  color: $light;
  font-family: $primaryFontFamily;
  font-weight: bold;
  text-align: center;
  font-size: $fontSmall;
  padding-left: 25px;
}

.targetText {
  color: $light;
  font-family: $primaryFontFamily;
  font-weight: bold;
  text-align: center;
  font-size: $fontSmall;
}

.target {
  display: flex;
  justify-content: space-evenly;
}

.editTragetContainer {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 12px;
}

.backgroundCircle {
  border: 20px solid $light;
  border-radius: 50%;
  height: 320px;
  width: 320px;
  position: absolute;
  opacity: 0.7;
  border-color: #6FCF97;
}

.addTargetButton {
  margin: 20px 0px;
  background-color: $highlightBackground;
  opacity: 0.8;
  padding: 10px 20px;
  border-radius: 10px;
}

.addTargetButton:hover {
  cursor: pointer;
}
.addTargetButton > p {
  opacity: 1;
  font-size: $fontMedium;
}

.circularProgreesContainer {
  position: relative;
  z-index: 2;
  span {
    width: 403px;
    height: 393px;
  }
}

.dataContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width: 198px;
  color: #4F4F4F;
  font-weight: bold;
  font-size: 45px;
}

